# webgpu

./: Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: publish.yml
examples/triangle-macos/: .gitignore  README.md  main.ts  package.json
src/: index.ts  lib.rs
